--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -1,6 +1,8 @@
 @import "~bootstrap/less/bootstrap";
 @import "fonts";
-@import "fa-icon";
+//@import "fa-icon";
+@import "~font-awesome/css/font-awesome.css";
 @import "variable";
 @import "navbar";
 @import "content";
+@import "register_login";
