--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -2,6 +2,7 @@
 @import "fonts";
 //@import "fa-icon";
 @import "~font-awesome/css/font-awesome.css";
+//@import "~X-editable/dist/bootstrap3-editable/css/bootstrap-editable.css";
 @import "variable";
 @import "navbar";
 @import "content";
