display problem fixed

--- a/resources/assets/less/content.less
+++ b/resources/assets/less/content.less
@@ -4,22 +4,30 @@
 	box-sizing: border-box !important;
 }
 
-.myrow{
-	/* column width */
-	-moz-column-width: 20.5em !important;
-	-webkit-column-width: 20.5em !important;
-	column-width: 20.5em !important;
-	/* space between columns */
-	-moz-column-gap: 0em;
-	-webkit-column-gap: 0em;
-    column-gap: 0em !important;
-    .item {
-	display: inline-block;
-	width: 100%;
-    margin: 1px;
-    padding:0.25em;
-    }
+//.myrow{
+//	/* column width */
+//	-moz-column-width: 20.5em !important;
+//	-webkit-column-width: 20.5em !important;
+//	column-width: 20.5em !important;
+//	/* space between columns */
+//	-moz-column-gap: 0em;
+//	-webkit-column-gap: 0em;
+//    column-gap: 0em !important;
+//    .item {
+//	//display: inline-block;
+//	width: 100%;
+//    margin: 1px;
+//    padding:0.25em;
+//    }
+//}
+
+.mainpage-post-content
+{
+  height: 3em;
+  padding: 2px; /* adjust to taste */
+  overflow: hidden
 }
+
 .poonez_panel_footer{
     background-color:#fff;color:#252525;background-color:#fff;border:none;border-top-color:#eee;border-top-style:dashed;border-top-width:2px;
 }
