profile paged added

--- a/resources/assets/less/content.less
+++ b/resources/assets/less/content.less
@@ -14,7 +14,7 @@
 //	-webkit-column-gap: 0em;
 //    column-gap: 0em !important;
 //    .item {
-//	//display: inline-block;
+//	display: inline-block;
 //	width: 100%;
 //    margin: 1px;
 //    padding:0.25em;
